@@ -1,3 +1,9 @@
+2002-01-17  Philippe Elie  <ph_e@club-internet.fr>
+
+	* gui/oprof_start.h:
+	* gui/oprof_start_config.h:
+	* gui/oprof_start.cpp: validate the RTC max count
+
 2002-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
